// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionLandingPage /> tests for CI loading state - snapshot test for CI module 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
      style="align-items: center; width: 500px;"
    >
      <span
        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
        data-icon="steps-spinner"
      >
        <svg
          height="32"
          viewBox="0 0 128 128"
          width="32"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:svg="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g>
            <path
              d="M122.5 69.25H96.47a33.1 33.1 0 0 0 0-10.5h26.05a5.25 5.25 0 0 1 0 10.5z"
              fill="#ff8e02"
              fill-opacity="1"
            />
            <path
              d="M112.04 97.83L89.47 84.8a33.1 33.1 0 0 0 5.25-9.1l22.57 13.03a5.25 5.25 0 0 1-5.28 9.1z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M88.68 117.35L75.65 94.78a33.1 33.1 0 0 0 9.1-5.25l13.02 22.57a5.25 5.25 0 1 1-9.1 5.25z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M58.7 122.57V96.5a33.1 33.1 0 0 0 10.5 0v26.07a5.25 5.25 0 0 1-10.5 0z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M30.1 112.1l13.04-22.57a33.1 33.1 0 0 0 9.1 5.25L39.2 117.35a5.25 5.25 0 1 1-9.1-5.25z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M10.6 88.74L33.16 75.7a33.1 33.1 0 0 0 5.25 9.1L15.88 97.83a5.25 5.25 0 1 1-5.25-9.1z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M5.37 58.75h26.06a33.1 33.1 0 0 0 0 10.5H5.37a5.25 5.25 0 0 1 0-10.5z"
              fill="#ffd29a"
              fill-opacity="0.4"
            />
            <path
              d="M15.85 30.17L38.4 43.2a33.1 33.1 0 0 0-5.24 9.1L10.6 39.25a5.25 5.25 0 1 1 5.25-9.1z"
              fill="#ffc680"
              fill-opacity="0.5"
            />
            <path
              d="M39.2 10.65l13.03 22.57a33.1 33.1 0 0 0-9.1 5.25l-13-22.57a5.25 5.25 0 1 1 9.1-5.25z"
              fill="#ffbb67"
              fill-opacity="0.6"
            />
            <path
              d="M69.2 5.43V31.5a33.1 33.1 0 0 0-10.5 0V5.42a5.25 5.25 0 1 1 10.5 0z"
              fill="#ffb04d"
              fill-opacity="0.7"
            />
            <path
              d="M97.77 15.9L84.75 38.47a33.1 33.1 0 0 0-9.1-5.25l13.03-22.57a5.25 5.25 0 1 1 9.1 5.25z"
              fill="#ffa535"
              fill-opacity="0.8"
            />
            <path
              d="M117.3 39.26L94.7 52.3a33.1 33.1 0 0 0-5.25-9.1l22.57-13.03a5.25 5.25 0 0 1 5.25 9.1z"
              fill="#ff991b"
              fill-opacity="0.9"
            />
            <animatetransform
              attributeName="transform"
              calcMode="discrete"
              dur="1200ms"
              repeatCount="indefinite"
              type="rotate"
              values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
            />
          </g>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
      >
        Loading, please wait...
      </p>
    </div>
  </div>
  <main
    class="main"
  >
    <div
      class="lhs"
    >
      <header
        class="header"
      >
        <header
          class="header"
        >
          <div
            class="headerTopRow"
          >
            <div
              class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/ci"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    data-icon="ci-main"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M29 16c0 1.6038-.3111 3.1631-.8544 4.5992-.0998.2637-.4365.3299-.6371.1317l-3.989-3.9409c-.1664-.1644-.1943-.4212-.0858-.6285.4326-.8268.6489-1.7725.6489-2.7615.0565-3.2217-2.6-5.87826-5.8783-5.87826-1.0408 0-1.9947.26076-2.8235.70606-.204.10961-.458.08344-.6229-.07926L11.207 4.64368c-.2503-.24699-.1738-.66779.1545-.79382C12.8053 3.29544 14.3394 3 16 3c7.1783 0 13 5.82174 13 13ZM8.47555 5.42062c.23175-.16331.54614-.12936.74662.07111l4.03533 4.03529c.1783.17831.1939.46028.0539.67008-.6307.9455-.9853 2.0581-.9853 3.2594 0 3.2783 2.6565 5.9348 5.9348 5.9348 1.2013 0 2.3139-.3546 3.2594-.9853.2098-.14.4918-.1244.6701.0539l4.3678 4.3679c.2035.2034.235.5235.0651.7557C24.2247 26.8601 20.3994 29 16 29 8.82174 29 3 23.1783 3 16c0-4.4033 2.14366-8.23149 5.47555-10.57938ZM18.2609 17.1304c2.2043 0 3.9565-1.7521 3.9565-3.9565 0-2.2043-1.7522-3.95651-3.9565-3.95651-2.2044 0-3.9566 1.75221-3.9566 3.95651 0 2.2044 1.7522 3.9565 3.9566 3.9565Z"
                        fill="url(#a)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="a"
                          x1="-5.39823"
                          x2="11.3982"
                          y1="11.3982"
                          y2="37.3982"
                        >
                          <stop
                            stop-color="#73DFE7"
                          />
                          <stop
                            offset="1"
                            stop-color="#0095F7"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    TEST_PROJECT
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    enable-background="new 0 0 8 14"
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    pipelines
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    enable-background="new 0 0 8 14"
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    common.pipeline
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    enable-background="new 0 0 8 14"
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="actionsBar"
            >
              <span
                class="StyledProps--font StyledProps--main duration StyledProps--inline"
                style="display: inline-flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-time StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  icon="time"
                >
                  <svg
                    data-icon="time"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      time
                    </desc>
                    <path
                      d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                 
                
              </span>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary Button--size Button--small"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="main-view"
                >
                  <svg
                    enable-background="new 0 0 14 9"
                    height="16"
                    viewBox="0 0 14 9"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m7 3.5c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zm7 .9c0-.1 0-.1 0 0 0-.2-.1-.3-.1-.4-.4-.6-1-1.1-1.5-1.6-1.2-1-2.5-1.9-4-2.2-.9-.2-1.7-.3-2.6-.1-.8.2-1.5.5-2.2.9-1.1.6-2.1 1.5-3 2.4-.2.2-.3.4-.5.6-.1.2-.1.5 0 .8.4.6 1 1.1 1.5 1.6 1.2 1 2.5 1.9 4 2.2.8.2 1.7.2 2.6 0 .8-.1 1.5-.4 2.2-.8 1.1-.6 2.1-1.5 3-2.4.2-.2.3-.4.5-.6 0-.1.1-.2.1-.3s0-.1 0-.1zm-7 2.6c-1.4 0-2.6-1.2-2.6-2.6s1.2-2.7 2.6-2.7 2.6 1.2 2.6 2.6-1.1 2.7-2.6 2.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  common.viewText
                </span>
              </button>
              <div
                class="main"
              >
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-more StyledProps--main"
                        icon="more"
                      >
                        <svg
                          data-icon="more"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            more
                          </desc>
                          <path
                            d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="titleContainer"
          >
            <div
              class="title"
            />
            <div
              class="pipelineId"
            >
              execution.pipelineIdentifierTextCI
            </div>
          </div>
        </header>
        <div
          class="main"
        >
          <div
            class="metaContainer"
          />
          <div
            class="userLabelContainer"
          >
            <div
              class="wrapper"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="userLabel"
                    tabindex="0"
                  >
                    <span
                      class="bp3-icon bp3-icon-user StyledProps--main"
                      icon="user"
                    >
                      <svg
                        data-icon="user"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          user
                        </desc>
                        <path
                          d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      
                    </p>
                  </div>
                </span>
              </span>
            </div>
          </div>
        </div>
      </header>
      <div
        class="main"
      >
        <div>
          <div
            class="bp3-tabs Tabs--main Tabs--horizontal"
          >
            <div
              class="bp3-tab-list"
              role="tablist"
            >
              <div
                class="bp3-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
              >
                <div
                  class="bp3-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_pipeline_view"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp3-tab"
                data-tab-id="pipeline_view"
                id="bp3-tab-title_execution-tabs_pipeline_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline"
                >
                  <span
                    class="bp3-icon bp3-icon-alignment-vertical-center StyledProps--main"
                    icon="alignment-vertical-center"
                  >
                    <svg
                      data-icon="alignment-vertical-center"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        alignment-vertical-center
                      </desc>
                      <path
                        d="M13 2H9V1c0-.55-.45-1-1-1S7 .45 7 1v1H3c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h4v2H6c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1v-3c0-.55-.45-1-1-1H9V7h4c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    common.pipeline
                  </span>
                </a>
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_inputs_view"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="inputs_view"
                id="bp3-tab-title_execution-tabs_inputs_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/inputs"
                >
                  <span
                    class="bp3-icon bp3-icon-manually-entered-data StyledProps--main"
                    icon="manually-entered-data"
                  >
                    <svg
                      data-icon="manually-entered-data"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        manually-entered-data
                      </desc>
                      <path
                        d="M1 8h3.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm14.49-4.01c.31-.32.51-.76.51-1.24C16 1.78 15.22 1 14.25 1c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.45-1.43zM1 4h7.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm0 6c-.55 0-1 .45-1 1 0 .48.35.86.8.96L2.76 10H1zm9.95-6.43l-6.69 6.69 2.47 2.47 6.69-6.69-2.47-2.47zm4.25 2.47L13.24 8H15c.55 0 1-.45 1-1 0-.48-.35-.86-.8-.96zM2 15l3.86-1.39-2.46-2.44L2 15zm13-5h-3.76l-2 2H15c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    inputs
                  </span>
                </a>
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_artifacts_view"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="artifacts_view"
                id="bp3-tab-title_execution-tabs_artifacts_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/artifacts"
                >
                  <span
                    class="bp3-icon bp3-icon-add-to-artifact StyledProps--main"
                    icon="add-to-artifact"
                  >
                    <svg
                      data-icon="add-to-artifact"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        add-to-artifact
                      </desc>
                      <path
                        d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    artifacts
                  </span>
                </a>
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_tests_view"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="tests_view"
                id="bp3-tab-title_execution-tabs_tests_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/ci/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/tests"
                >
                  <span
                    class="bp3-icon bp3-icon-lab-test StyledProps--main"
                    icon="lab-test"
                  >
                    <svg
                      data-icon="lab-test"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        lab-test
                      </desc>
                      <path
                        d="M11 1a1 1 0 010 2v3l3 7v1.25a.75.75 0 01-.75.75H2.75a.75.75 0 01-.75-.75V13l3-7V3a1 1 0 110-2h6zM9 3H7v3l-1.714 4h5.428L9 6V3z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    tests
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="children"
        />
        <div
          class="viewToggle"
        >
          <span
            data-tooltip-id="consoleViewToggle"
          >
            consoleView
          </span>
          <label
            class="bp3-control bp3-switch"
          >
            <input
              name="console-view-toggle"
              type="checkbox"
            />
            <span
              class="bp3-control-indicator"
            />
          </label>
        </div>
      </div>
      <div
        class="childContainer"
        data-view="graph"
        id="pipeline-execution-container"
      >
        <div
          data-testid="children"
        >
          Execution Landing Page
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`<ExecutionLandingPage /> tests loading state - snapshot test 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
      style="align-items: center; width: 500px;"
    >
      <span
        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
        data-icon="steps-spinner"
      >
        <svg
          height="32"
          viewBox="0 0 128 128"
          width="32"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:svg="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g>
            <path
              d="M122.5 69.25H96.47a33.1 33.1 0 0 0 0-10.5h26.05a5.25 5.25 0 0 1 0 10.5z"
              fill="#ff8e02"
              fill-opacity="1"
            />
            <path
              d="M112.04 97.83L89.47 84.8a33.1 33.1 0 0 0 5.25-9.1l22.57 13.03a5.25 5.25 0 0 1-5.28 9.1z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M88.68 117.35L75.65 94.78a33.1 33.1 0 0 0 9.1-5.25l13.02 22.57a5.25 5.25 0 1 1-9.1 5.25z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M58.7 122.57V96.5a33.1 33.1 0 0 0 10.5 0v26.07a5.25 5.25 0 0 1-10.5 0z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M30.1 112.1l13.04-22.57a33.1 33.1 0 0 0 9.1 5.25L39.2 117.35a5.25 5.25 0 1 1-9.1-5.25z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M10.6 88.74L33.16 75.7a33.1 33.1 0 0 0 5.25 9.1L15.88 97.83a5.25 5.25 0 1 1-5.25-9.1z"
              fill="#ffddb3"
              fill-opacity="0.3"
            />
            <path
              d="M5.37 58.75h26.06a33.1 33.1 0 0 0 0 10.5H5.37a5.25 5.25 0 0 1 0-10.5z"
              fill="#ffd29a"
              fill-opacity="0.4"
            />
            <path
              d="M15.85 30.17L38.4 43.2a33.1 33.1 0 0 0-5.24 9.1L10.6 39.25a5.25 5.25 0 1 1 5.25-9.1z"
              fill="#ffc680"
              fill-opacity="0.5"
            />
            <path
              d="M39.2 10.65l13.03 22.57a33.1 33.1 0 0 0-9.1 5.25l-13-22.57a5.25 5.25 0 1 1 9.1-5.25z"
              fill="#ffbb67"
              fill-opacity="0.6"
            />
            <path
              d="M69.2 5.43V31.5a33.1 33.1 0 0 0-10.5 0V5.42a5.25 5.25 0 1 1 10.5 0z"
              fill="#ffb04d"
              fill-opacity="0.7"
            />
            <path
              d="M97.77 15.9L84.75 38.47a33.1 33.1 0 0 0-9.1-5.25l13.03-22.57a5.25 5.25 0 1 1 9.1 5.25z"
              fill="#ffa535"
              fill-opacity="0.8"
            />
            <path
              d="M117.3 39.26L94.7 52.3a33.1 33.1 0 0 0-5.25-9.1l22.57-13.03a5.25 5.25 0 0 1 5.25 9.1z"
              fill="#ff991b"
              fill-opacity="0.9"
            />
            <animatetransform
              attributeName="transform"
              calcMode="discrete"
              dur="1200ms"
              repeatCount="indefinite"
              type="rotate"
              values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
            />
          </g>
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
      >
        Loading, please wait...
      </p>
    </div>
  </div>
  <main
    class="main"
  >
    <div
      class="lhs"
    >
      <header
        class="header"
      >
        <header
          class="header"
        >
          <div
            class="headerTopRow"
          >
            <div
              class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/cd"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    data-icon="cd-main"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M26.4266 7.06093c1.604.9082 2.5891 2.61496 2.5732 4.45817l-.077 8.9346c-.0155 1.7969-.9805 3.4516-2.5368 4.3499l-8.002 4.6187c-1.5563.8983-3.4717.9062-5.0355.0208l-7.77508-4.4024c-1.60398-.9082-2.58912-2.6149-2.57323-4.4581l.07702-8.9347c.01549-1.79688.98045-3.45151 2.53678-4.34982L13.616 2.67935c1.5563-.89831 3.4717-.90623 5.0355-.02083l7.7751 4.40241Zm-2.829 6.93717c-.4206 1.5856-2.0293 2.5375-3.6019 2.1409l-7.4887-2.0259c-1.2333-.3339-2.51707-.1628-3.6202.48-1.10295.6428-1.89161 1.6795-2.22178 2.9246-.33051 1.2454-.16137 2.5454.47878 3.6646.64015 1.1192 1.67111 1.9171 2.9048 2.2508 1.2334.334 2.5171.1629 3.6201-.4798 1.1031-.6429 1.8918-1.6796 2.2219-2.9247l.2612-1.0464c.0329-.1321-.0459-.2662-.1773-.3018l-1.258-.3405c-.1352-.0366-.274.045-.3079.1809l-.2553 1.0238c-.4259 1.6026-2.0645 2.5569-3.6515 2.1278-1.58229-.4285-2.52298-2.0732-2.09943-3.6705.42065-1.5857 2.02953-2.5383 3.60213-2.1417l7.4885 2.0266c1.2333.3339 2.5171.1629 3.6202-.48 1.103-.6427 1.8916-1.6795 2.2218-2.9246.3305-1.2453.1613-2.5454-.4788-3.6645-.6402-1.11922-1.6711-1.91714-2.9048-2.25088-1.2334-.33394-2.5171-.16289-3.6201.47987-1.1031.64287-1.8918 1.67961-2.2219 2.92471l-.2471.8272c-.0402.1347.0385.2761.1742.3128l1.2581.3405c.1309.0354.2661-.0398.3049-.1697l.2472-.8269c.4259-1.6026 2.0645-2.55683 3.6515-2.1277 1.5823.4284 2.523 2.0731 2.0994 3.6705Z"
                        fill="url(#a)"
                        fill-rule="evenodd"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="a"
                          x1="6.7737"
                          x2="21.5"
                          y1="2"
                          y2="30"
                        >
                          <stop
                            stop-color="#62F91F"
                          />
                          <stop
                            offset="1"
                            stop-color="#45BD35"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    TEST_PROJECT
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    enable-background="new 0 0 8 14"
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    pipelines
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    enable-background="new 0 0 8 14"
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
              >
                <a
                  class="Breadcrumbs--breadcrumb"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                  >
                    common.pipeline
                  </p>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                  data-icon="main-chevron-right"
                >
                  <svg
                    enable-background="new 0 0 8 14"
                    height="8"
                    viewBox="0 0 8 14"
                    width="8"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="actionsBar"
            >
              <span
                class="StyledProps--font StyledProps--main duration StyledProps--inline"
                style="display: inline-flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-time StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  icon="time"
                >
                  <svg
                    data-icon="time"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      time
                    </desc>
                    <path
                      d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                 
                
              </span>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary Button--size Button--small"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="main-view"
                >
                  <svg
                    enable-background="new 0 0 14 9"
                    height="16"
                    viewBox="0 0 14 9"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m7 3.5c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zm7 .9c0-.1 0-.1 0 0 0-.2-.1-.3-.1-.4-.4-.6-1-1.1-1.5-1.6-1.2-1-2.5-1.9-4-2.2-.9-.2-1.7-.3-2.6-.1-.8.2-1.5.5-2.2.9-1.1.6-2.1 1.5-3 2.4-.2.2-.3.4-.5.6-.1.2-.1.5 0 .8.4.6 1 1.1 1.5 1.6 1.2 1 2.5 1.9 4 2.2.8.2 1.7.2 2.6 0 .8-.1 1.5-.4 2.2-.8 1.1-.6 2.1-1.5 3-2.4.2-.2.3-.4.5-.6 0-.1.1-.2.1-.3s0-.1 0-.1zm-7 2.6c-1.4 0-2.6-1.2-2.6-2.6s1.2-2.7 2.6-2.7 2.6 1.2 2.6 2.6-1.1 2.7-2.6 2.7z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  common.viewText
                </span>
              </button>
              <div
                class="main"
              >
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-more StyledProps--main"
                        icon="more"
                      >
                        <svg
                          data-icon="more"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            more
                          </desc>
                          <path
                            d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="titleContainer"
          >
            <div
              class="title"
            />
            <div
              class="pipelineId"
            >
              execution.pipelineIdentifierTextCD
            </div>
          </div>
        </header>
        <div
          class="main"
        >
          <div
            class="metaContainer"
          />
          <div
            class="userLabelContainer"
          >
            <div
              class="wrapper"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="userLabel"
                    tabindex="0"
                  >
                    <span
                      class="bp3-icon bp3-icon-user StyledProps--main"
                      icon="user"
                    >
                      <svg
                        data-icon="user"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          user
                        </desc>
                        <path
                          d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      
                    </p>
                  </div>
                </span>
              </span>
            </div>
          </div>
        </div>
      </header>
      <div
        class="main"
      >
        <div>
          <div
            class="bp3-tabs Tabs--main Tabs--horizontal"
          >
            <div
              class="bp3-tab-list"
              role="tablist"
            >
              <div
                class="bp3-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
              >
                <div
                  class="bp3-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_pipeline_view"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp3-tab"
                data-tab-id="pipeline_view"
                id="bp3-tab-title_execution-tabs_pipeline_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline"
                >
                  <span
                    class="bp3-icon bp3-icon-alignment-vertical-center StyledProps--main"
                    icon="alignment-vertical-center"
                  >
                    <svg
                      data-icon="alignment-vertical-center"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        alignment-vertical-center
                      </desc>
                      <path
                        d="M13 2H9V1c0-.55-.45-1-1-1S7 .45 7 1v1H3c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h4v2H6c-.55 0-1 .45-1 1v3c0 .55.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1v-3c0-.55-.45-1-1-1H9V7h4c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    common.pipeline
                  </span>
                </a>
              </div>
              <div
                aria-controls="bp3-tab-panel_execution-tabs_inputs_view"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="inputs_view"
                id="bp3-tab-title_execution-tabs_inputs_view"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tabLink"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/inputs"
                >
                  <span
                    class="bp3-icon bp3-icon-manually-entered-data StyledProps--main"
                    icon="manually-entered-data"
                  >
                    <svg
                      data-icon="manually-entered-data"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        manually-entered-data
                      </desc>
                      <path
                        d="M1 8h3.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm14.49-4.01c.31-.32.51-.76.51-1.24C16 1.78 15.22 1 14.25 1c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.45-1.43zM1 4h7.76l2-2H1c-.55 0-1 .45-1 1s.45 1 1 1zm0 6c-.55 0-1 .45-1 1 0 .48.35.86.8.96L2.76 10H1zm9.95-6.43l-6.69 6.69 2.47 2.47 6.69-6.69-2.47-2.47zm4.25 2.47L13.24 8H15c.55 0 1-.45 1-1 0-.48-.35-.86-.8-.96zM2 15l3.86-1.39-2.46-2.44L2 15zm13-5h-3.76l-2 2H15c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    inputs
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="children"
        />
        <div
          class="viewToggle"
        >
          <span
            data-tooltip-id="consoleViewToggle"
          >
            consoleView
          </span>
          <label
            class="bp3-control bp3-switch"
          >
            <input
              name="console-view-toggle"
              type="checkbox"
            />
            <span
              class="bp3-control-indicator"
            />
          </label>
        </div>
      </div>
      <div
        class="childContainer"
        data-view="graph"
        id="pipeline-execution-container"
      >
        <div
          data-testid="children"
        >
          Execution Landing Page
        </div>
      </div>
    </div>
  </main>
</div>
`;
